fix:fix size hero img and update spacing

--- a/practice-two/src/styles/pages/partner.css
+++ b/practice-two/src/styles/pages/partner.css
@@ -31,7 +31,7 @@
 
 @media (min-width: 1440px) {
   .partner {
-    padding-bottom: 87px;
+    padding-bottom: 93px;
   }
 
   .partner-wrapper {
